# Fila-Virtual-Inteligente-para-Atendimento-Presencial-FVAP-

./: CMakeLists.txt  README.md  atendimento_presencial2.c
